--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>PMVC (PureMVC) App</title>
   </head>
   <body>
     <div id="root"></div>
-    <div id="root2"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
